# dexsim

./: .gitignore  README.md  calcliq.py  pyproject.toml
.github/workflows/: release.yaml  testpub.yaml
dexsim/: __init__.py  dex.py  lender.py  lp.py  pool.py  snapshot.py  utils.py
dexsim/abis/: Lender.json  __init__.py
dexsim/state/: pairs.yaml  pool_snapshot.json  quoter_pool_snapshot.json  tokens.yaml
docs/: readme.md
example/: config.yaml  main.py
tests/: conftest.py  test_dex.py  test_lender.py  test_liquidity.py  test_lp_strategies.py  test_move_prices.py  test_pool.py  test_snapshot.py  testconfig.yaml
